# AE-using-column-generation-in-column-and-constraint-generation

./: README.md  code
code/: .gitignore  CMakeLists.txt  README.md
code/FLP/: CMakeLists.txt  FacilityLocationProblem.cpp  FacilityLocationProblem.h  Instance.cpp  Instance.h  main.cpp
code/FLP/data/: instance_F10_C20__R200__0.txt  instance_F10_C20__R200__2.txt  instance_F10_C20__R200__3.txt  instance_F10_C20__R200__4.txt  instance_F10_C20__R200__7.txt  instance_F10_C20__R200__8.txt  instance_F10_C20__R200__9.txt  instance_F10_C20__R300__0.txt  instance_F10_C20__R300__3.txt  instance_F10_C20__R300__4.txt  instance_F10_C20__R300__7.txt  instance_F10_C20__R300__9.txt  instance_F10_C30__R200__0.txt  instance_F10_C30__R200__2.txt  instance_F10_C30__R200__4.txt  instance_F10_C30__R200__5.txt  instance_F10_C30__R200__7.txt  instance_F10_C30__R200__8.txt  instance_F10_C30__R200__9.txt  instance_F10_C30__R300__2.txt  instance_F10_C30__R300__6.txt  instance_F10_C30__R300__8.txt  instance_F10_C30__R300__9.txt  instance_F10_C40__R200__0.txt  instance_F10_C40__R200__3.txt  instance_F10_C40__R200__4.txt  (+34 more)
code/GAP/: CMakeLists.txt  GeneralAssignmentProblem.cpp  GeneralAssignmentProblem.h  Instance.h  main.cpp
code/JSP/: CMakeLists.txt  Instance.cpp  Instance.h  JobSchedulingProblem.cpp  JobSchedulingProblem.h  generate.cpp  main.cpp
code/MJSP/: CMakeLists.txt  Instance.cpp  Instance.h  JobSchedulingProblem.cpp  JobSchedulingProblem.h  generate.cpp  main.cpp
code/algorithms/: CMakeLists.txt  ColumnAndConstraintGeneration.cpp  ColumnAndConstraintGeneration.h  ColumnAndConstraintGenerator.h
(+1348 files in other folders)
